// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav testcases should render one level of navigation links 1`] = `
<SideNav
  aria-label="Side navigation"
  defaultExpanded={false}
  links={
    Array [
      Object {
        "href": "javascript:void(0)",
        "icon": <ForwardRef
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        />,
        "label": "Boards",
        "linkContent": "Boards",
        "onClick": [MockFunction],
      },
    ]
  }
>
  <SideNav__StyledSideNav
    aria-label="Side navigation"
    defaultExpanded={false}
  >
    <StyledComponent
      aria-label="Side navigation"
      defaultExpanded={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "__docgenInfo": Object {
            "composes": Array [
              "./AriaPropTypes",
            ],
            "description": "",
            "displayName": "SideNav",
            "methods": Array [
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleExpand",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleFocus",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleBlur",
                "params": Array [],
                "returns": null,
              },
            ],
            "props": Object {
              "className": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "null",
                },
                "description": "Optionally provide a custom class to apply to the underlying <li> node",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "defaultExpanded": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "false",
                },
                "description": "Specify whether the side navigation is expanded or collapsed",
                "required": false,
                "type": Object {
                  "name": "bool",
                },
              },
              "translateById": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "function translateById(id) {
  return translations[id];
}",
                },
                "description": "Provide a custom function for translating all message ids within this
component. This function will take in two arguments: the mesasge Id and the
state of the component. From this, you should return a string representing
the label you want displayed or read by screen readers.",
                "required": false,
                "type": Object {
                  "name": "func",
                },
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SideNav__StyledSideNav-yn3bk8-0",
            "isStatic": true,
            "lastClassName": "emgnzn",
            "rules": Array [
              "&&&{background-color:",
              "#152935",
              ";border-top:1px solid #3c4646;height:calc(100% - 3rem);}",
            ],
          },
          "displayName": "SideNav__StyledSideNav",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SideNav__StyledSideNav-yn3bk8-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <SideNav
        aria-label="Side navigation"
        className="SideNav__StyledSideNav-yn3bk8-0 emgnzn"
        defaultExpanded={false}
        translateById={[Function]}
      >
        <nav
          aria-label="Side navigation"
          className="bx--side-nav__navigation bx--side-nav SideNav__StyledSideNav-yn3bk8-0 emgnzn"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <SideNavItems>
            <ul
              className="bx--side-nav__items"
            >
              <SideNav__StyledSideNavLink
                aria-label="Boards"
                href="javascript:void(0)"
                icon={
                  <ForwardRef
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                }
                key="menu-link-Boards-global"
                onClick={[MockFunction]}
              >
                <StyledComponent
                  aria-label="Boards"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": true,
                        "lastClassName": "knorNS",
                        "rules": Array [
                          "&&&{:hover{background-color:",
                          "#2d3f48",
                          ";}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  href="javascript:void(0)"
                  icon={
                    <ForwardRef
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  }
                  onClick={[MockFunction]}
                >
                  <SideNavLink
                    aria-label="Boards"
                    className="SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                    element="a"
                    href="javascript:void(0)"
                    icon={
                      <ForwardRef
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    }
                    onClick={[MockFunction]}
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Boards"
                          className="bx--side-nav__link SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                          element="a"
                          href="javascript:void(0)"
                          onClick={[MockFunction]}
                        >
                          <a
                            aria-label="Boards"
                            className="bx--side-nav__link SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                            href="javascript:void(0)"
                            onClick={[MockFunction]}
                          >
                            <SideNavIcon
                              small={true}
                            >
                              <div
                                className="bx--side-nav__icon bx--side-nav__icon--small"
                              >
                                <AppSwitcher24
                                  className="bx--header__menu-item bx--header__menu-title"
                                  description="Icon"
                                  fill="white"
                                  height={24}
                                  preserveAspectRatio="xMidYMid meet"
                                  viewBox="0 0 24 24"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="bx--header__menu-item bx--header__menu-title"
                                    description="Icon"
                                    fill="white"
                                    focusable="false"
                                    height={24}
                                    preserveAspectRatio="xMidYMid meet"
                                    style={
                                      Object {
                                        "willChange": "transform",
                                      }
                                    }
                                    viewBox="0 0 24 24"
                                    width={24}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M18 18h3v3h-3zm-7.5 0h3v3h-3zM3 18h3v3H3zm15-7.5h3v3h-3zm-7.5 0h3v3h-3zm-7.5 0h3v3H3zM18 3h3v3h-3zm-7.5 0h3v3h-3zM3 3h3v3H3z"
                                    />
                                  </svg>
                                </AppSwitcher24>
                              </div>
                            </SideNavIcon>
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Boards
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
            </ul>
          </SideNavItems>
          <SideNavFooter
            assistiveText="Open"
            isExpanded={false}
            onToggle={[Function]}
          >
            <footer
              className="bx--side-nav__footer"
            >
              <button
                className="bx--side-nav__toggle"
                onClick={[Function]}
                title="Open"
                type="button"
              >
                <div
                  className="bx--side-nav__icon"
                >
                  <ChevronRight20
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 16L12 26l-1.4-1.4 8.6-8.6-8.6-8.6L12 6z"
                      />
                    </svg>
                  </ChevronRight20>
                </div>
                <span
                  className="bx--assistive-text"
                >
                  Open
                </span>
              </button>
            </footer>
          </SideNavFooter>
        </nav>
      </SideNav>
    </StyledComponent>
  </SideNav__StyledSideNav>
</SideNav>
`;

exports[`SideNav testcases should render two levels of navigation links 1`] = `
<SideNav
  aria-label="Side navigation"
  defaultExpanded={false}
  links={
    Array [
      Object {
        "href": "javascript:void(0)",
        "icon": <ForwardRef
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        />,
        "label": "Boards",
        "linkContent": "Boards",
        "onClick": [MockFunction],
      },
      Object {
        "current": true,
        "href": "javascript:void(0)",
        "icon": <ForwardRef
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        />,
        "label": "Devices",
        "linkContent": "Devices",
        "onClick": null,
      },
      Object {
        "childContent": Array [
          Object {
            "content": "Yet another link",
            "href": "javascript:void(0)",
            "onClick": [MockFunction],
          },
        ],
        "href": "javascript:void(0)",
        "icon": <ForwardRef
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        />,
        "label": "Members",
        "linkContent": "Members",
        "onClick": null,
      },
    ]
  }
>
  <SideNav__StyledSideNav
    aria-label="Side navigation"
    defaultExpanded={false}
  >
    <StyledComponent
      aria-label="Side navigation"
      defaultExpanded={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "__docgenInfo": Object {
            "composes": Array [
              "./AriaPropTypes",
            ],
            "description": "",
            "displayName": "SideNav",
            "methods": Array [
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleExpand",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleFocus",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleBlur",
                "params": Array [],
                "returns": null,
              },
            ],
            "props": Object {
              "className": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "null",
                },
                "description": "Optionally provide a custom class to apply to the underlying <li> node",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "defaultExpanded": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "false",
                },
                "description": "Specify whether the side navigation is expanded or collapsed",
                "required": false,
                "type": Object {
                  "name": "bool",
                },
              },
              "translateById": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "function translateById(id) {
  return translations[id];
}",
                },
                "description": "Provide a custom function for translating all message ids within this
component. This function will take in two arguments: the mesasge Id and the
state of the component. From this, you should return a string representing
the label you want displayed or read by screen readers.",
                "required": false,
                "type": Object {
                  "name": "func",
                },
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SideNav__StyledSideNav-yn3bk8-0",
            "isStatic": true,
            "lastClassName": "emgnzn",
            "rules": Array [
              "&&&{background-color:",
              "#152935",
              ";border-top:1px solid #3c4646;height:calc(100% - 3rem);}",
            ],
          },
          "displayName": "SideNav__StyledSideNav",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SideNav__StyledSideNav-yn3bk8-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <SideNav
        aria-label="Side navigation"
        className="SideNav__StyledSideNav-yn3bk8-0 emgnzn"
        defaultExpanded={false}
        translateById={[Function]}
      >
        <nav
          aria-label="Side navigation"
          className="bx--side-nav__navigation bx--side-nav SideNav__StyledSideNav-yn3bk8-0 emgnzn"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <SideNavItems>
            <ul
              className="bx--side-nav__items"
            >
              <SideNav__StyledSideNavLink
                aria-label="Boards"
                href="javascript:void(0)"
                icon={
                  <ForwardRef
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                }
                key="menu-link-Boards-global"
                onClick={[MockFunction]}
              >
                <StyledComponent
                  aria-label="Boards"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": true,
                        "lastClassName": "knorNS",
                        "rules": Array [
                          "&&&{:hover{background-color:",
                          "#2d3f48",
                          ";}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  href="javascript:void(0)"
                  icon={
                    <ForwardRef
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  }
                  onClick={[MockFunction]}
                >
                  <SideNavLink
                    aria-label="Boards"
                    className="SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                    element="a"
                    href="javascript:void(0)"
                    icon={
                      <ForwardRef
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    }
                    onClick={[MockFunction]}
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Boards"
                          className="bx--side-nav__link SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                          element="a"
                          href="javascript:void(0)"
                          onClick={[MockFunction]}
                        >
                          <a
                            aria-label="Boards"
                            className="bx--side-nav__link SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                            href="javascript:void(0)"
                            onClick={[MockFunction]}
                          >
                            <SideNavIcon
                              small={true}
                            >
                              <div
                                className="bx--side-nav__icon bx--side-nav__icon--small"
                              >
                                <AppSwitcher24
                                  className="bx--header__menu-item bx--header__menu-title"
                                  description="Icon"
                                  fill="white"
                                  height={24}
                                  preserveAspectRatio="xMidYMid meet"
                                  viewBox="0 0 24 24"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="bx--header__menu-item bx--header__menu-title"
                                    description="Icon"
                                    fill="white"
                                    focusable="false"
                                    height={24}
                                    preserveAspectRatio="xMidYMid meet"
                                    style={
                                      Object {
                                        "willChange": "transform",
                                      }
                                    }
                                    viewBox="0 0 24 24"
                                    width={24}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M18 18h3v3h-3zm-7.5 0h3v3h-3zM3 18h3v3H3zm15-7.5h3v3h-3zm-7.5 0h3v3h-3zm-7.5 0h3v3H3zM18 3h3v3h-3zm-7.5 0h3v3h-3zM3 3h3v3H3z"
                                    />
                                  </svg>
                                </AppSwitcher24>
                              </div>
                            </SideNavIcon>
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Boards
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
              <SideNav__StyledSideNavLink
                aria-label="Devices"
                href="javascript:void(0)"
                icon={
                  <ForwardRef
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                }
                isActive={true}
                key="menu-link-Devices-global"
                onClick={null}
              >
                <StyledComponent
                  aria-label="Devices"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": true,
                        "lastClassName": "knorNS",
                        "rules": Array [
                          "&&&{:hover{background-color:",
                          "#2d3f48",
                          ";}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  href="javascript:void(0)"
                  icon={
                    <ForwardRef
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  }
                  isActive={true}
                  onClick={null}
                >
                  <SideNavLink
                    aria-label="Devices"
                    className="SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                    element="a"
                    href="javascript:void(0)"
                    icon={
                      <ForwardRef
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    }
                    isActive={true}
                    onClick={null}
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Devices"
                          className="bx--side-nav__link bx--side-nav__link--current SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                          element="a"
                          href="javascript:void(0)"
                          onClick={null}
                        >
                          <a
                            aria-label="Devices"
                            className="bx--side-nav__link bx--side-nav__link--current SideNav__StyledSideNavLink-yn3bk8-1 knorNS"
                            href="javascript:void(0)"
                            onClick={null}
                          >
                            <SideNavIcon
                              small={true}
                            >
                              <div
                                className="bx--side-nav__icon bx--side-nav__icon--small"
                              >
                                <Chip24
                                  className="bx--header__menu-item bx--header__menu-title"
                                  description="Icon"
                                  fill="white"
                                  height={24}
                                  preserveAspectRatio="xMidYMid meet"
                                  viewBox="0 0 32 32"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="bx--header__menu-item bx--header__menu-title"
                                    description="Icon"
                                    fill="white"
                                    focusable="false"
                                    height={24}
                                    preserveAspectRatio="xMidYMid meet"
                                    style={
                                      Object {
                                        "willChange": "transform",
                                      }
                                    }
                                    viewBox="0 0 32 32"
                                    width={24}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M11 11v10h10V11zm8 8h-6v-6h6z"
                                    />
                                    <path
                                      d="M29 13v-2h-3V8a2 2 0 0 0-2-2h-3V3h-2v3h-6V3h-2v3H8a2 2 0 0 0-2 2v3H3v2h3v6H3v2h3v3a2 2 0 0 0 2 2h3v3h2v-3h6v3h2v-3h3a2 2 0 0 0 2-2v-3h3v-2h-3v-6zm-5 11H8V8h16z"
                                    />
                                  </svg>
                                </Chip24>
                              </div>
                            </SideNavIcon>
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Devices
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
              <SideNav__StyledSideNavMenu
                aria-label="dropdown"
                icon={
                  <ForwardRef
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                }
                key="menu-link-2-dropdown"
                title="Members"
              >
                <StyledComponent
                  aria-label="dropdown"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavMenu-yn3bk8-2",
                        "isStatic": true,
                        "lastClassName": "ZcABH",
                        "rules": Array [
                          "&&&{background-color:",
                          "#152935",
                          ";:not(.bx--side-nav__item--active):hover{background-color:",
                          "#152935",
                          ";}:not(.bx--side-nav__item--active):hover button{background-color:",
                          "#2d3f48",
                          ";}.bx--side-nav__menu[role='menu'] a.bx--side-nav__link[role='menuitem']:not(.bx--side-nav__link--current):not([aria-current='page']):hover{background-color:",
                          "#2d3f48",
                          ";}:hover{background-color:",
                          "#2d3f48",
                          ";}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavMenu",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavMenu-yn3bk8-2",
                      "target": Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      },
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  icon={
                    <ForwardRef
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  }
                  title="Members"
                >
                  <ForwardRef
                    aria-label="dropdown"
                    className="SideNav__StyledSideNavMenu-yn3bk8-2 ZcABH"
                    icon={
                      <ForwardRef
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    }
                    title="Members"
                  >
                    <SideNavMenu
                      aria-label="dropdown"
                      buttonRef={null}
                      className="SideNav__StyledSideNavMenu-yn3bk8-2 ZcABH"
                      defaultExpanded={false}
                      icon={
                        <ForwardRef
                          className="bx--header__menu-item bx--header__menu-title"
                          description="Icon"
                          fill="white"
                          height={24}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      }
                      isActive={false}
                      title="Members"
                    >
                      <li
                        className="bx--side-nav__item SideNav__StyledSideNavMenu-yn3bk8-2 ZcABH"
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup="true"
                          className="bx--side-nav__submenu"
                          onClick={[Function]}
                          type="button"
                        >
                          <SideNavIcon
                            small={false}
                          >
                            <div
                              className="bx--side-nav__icon"
                            >
                              <Group24
                                className="bx--header__menu-item bx--header__menu-title"
                                description="Icon"
                                fill="white"
                                height={24}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 32 32"
                                width={24}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="bx--header__menu-item bx--header__menu-title"
                                  description="Icon"
                                  fill="white"
                                  focusable="false"
                                  height={24}
                                  preserveAspectRatio="xMidYMid meet"
                                  style={
                                    Object {
                                      "willChange": "transform",
                                    }
                                  }
                                  viewBox="0 0 32 32"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M31 30h-2v-3a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3v3h-2v-3a5 5 0 0 1 5-5h4a5 5 0 0 1 5 5zm-7-18a3 3 0 1 1-3 3 3 3 0 0 1 3-3m0-2a5 5 0 1 0 5 5 5 5 0 0 0-5-5zm-9 12h-2v-3a3 3 0 0 0-3-3H6a3 3 0 0 0-3 3v3H1v-3a5 5 0 0 1 5-5h4a5 5 0 0 1 5 5zM8 4a3 3 0 1 1-3 3 3 3 0 0 1 3-3m0-2a5 5 0 1 0 5 5 5 5 0 0 0-5-5z"
                                  />
                                </svg>
                              </Group24>
                            </div>
                          </SideNavIcon>
                          <span
                            className="bx--side-nav__submenu-title"
                          >
                            Members
                          </span>
                          <SideNavIcon
                            className="bx--side-nav__submenu-chevron"
                            small={true}
                          >
                            <div
                              className="bx--side-nav__icon bx--side-nav__icon--small bx--side-nav__submenu-chevron"
                            >
                              <ChevronDown20
                                height={20}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 32 32"
                                width={20}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden={true}
                                  focusable="false"
                                  height={20}
                                  preserveAspectRatio="xMidYMid meet"
                                  style={
                                    Object {
                                      "willChange": "transform",
                                    }
                                  }
                                  viewBox="0 0 32 32"
                                  width={20}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M16 22L6 12l1.4-1.4 8.6 8.6 8.6-8.6L26 12z"
                                  />
                                </svg>
                              </ChevronDown20>
                            </div>
                          </SideNavIcon>
                        </button>
                        <ul
                          className="bx--side-nav__menu"
                          role="menu"
                        >
                          <ForwardRef
                            href="javascript:void(0)"
                            key="menu-link-0-child"
                            onClick={[MockFunction]}
                          >
                            <li
                              className="bx--side-nav__menu-item"
                              role="none"
                            >
                              <Link
                                className="bx--side-nav__link"
                                element="a"
                                href="javascript:void(0)"
                                onClick={[MockFunction]}
                                role="menuitem"
                              >
                                <a
                                  className="bx--side-nav__link"
                                  href="javascript:void(0)"
                                  onClick={[MockFunction]}
                                  role="menuitem"
                                >
                                  <SideNavLinkText>
                                    <span
                                      className="bx--side-nav__link-text"
                                    >
                                      Yet another link
                                    </span>
                                  </SideNavLinkText>
                                </a>
                              </Link>
                            </li>
                          </ForwardRef>
                        </ul>
                      </li>
                    </SideNavMenu>
                  </ForwardRef>
                </StyledComponent>
              </SideNav__StyledSideNavMenu>
            </ul>
          </SideNavItems>
          <SideNavFooter
            assistiveText="Open"
            isExpanded={false}
            onToggle={[Function]}
          >
            <footer
              className="bx--side-nav__footer"
            >
              <button
                className="bx--side-nav__toggle"
                onClick={[Function]}
                title="Open"
                type="button"
              >
                <div
                  className="bx--side-nav__icon"
                >
                  <ChevronRight20
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 16L12 26l-1.4-1.4 8.6-8.6-8.6-8.6L12 6z"
                      />
                    </svg>
                  </ChevronRight20>
                </div>
                <span
                  className="bx--assistive-text"
                >
                  Open
                </span>
              </button>
            </footer>
          </SideNavFooter>
        </nav>
      </SideNav>
    </StyledComponent>
  </SideNav__StyledSideNav>
</SideNav>
`;
